# betterlapse

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CropTransformer.cpp  CropTransformer.hpp  IndividualTransformer.cpp  IndividualTransformer.hpp  Transformer.cpp  Transformer.hpp  UnsharpMaskTransformer.cpp  UnsharpMaskTransformer.hpp  WhiteBalanceTransformer.cpp  WhiteBalanceTransformer.hpp  betterlapse.cpp
